updated project name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "advent-of-code-python"
+name = "advent_of_code_python"
 version = "0.1.0"
 description = ""
 authors = ["jsattari <jsattari3@gmail.com>"]
