--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,11 @@ repos:
     rev: 4c8a8c7
     hooks:
       - id: mypy
+  - repo: local
+    hooks:
+      - id: custom-mypy-ignore
+        name: "Ignore mypy error for 2022 directory"
+        entry: "mypy"
+        language: system
+        types: [python]
+        exclude: ^src/
